fix gap issue

--- a/components/instructorcard.module.scss
+++ b/components/instructorcard.module.scss
@@ -22,7 +22,7 @@
 }
 
 .badgeRow {
-  display: flex;
+  display: flex!important;
   flex-direction: row;
   justify-content: flex-start;
   flex-wrap: wrap;
